Fix rubocop offenses

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2874,7 +2874,7 @@ Style/ClassAndModuleChildren:
   # manual oversight.
   SafeAutoCorrect: false
   AutoCorrect: false
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.19'
   #
   # Basically there are two different styles:
