Set up basic auth for all the application in staging

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3238,7 +3238,7 @@ Style/GlobalVars:
 Style/GuardClause:
   Description: 'Check for conditionals that can be replaced with guard clauses'
   StyleGuide: '#no-nested-conditionals'
-  Enabled: true
+  Enabled: false
   VersionAdded: '0.20'
   VersionChanged: '0.22'
   # `MinBodyLength` defines the number of lines of the a body of an `if` or `unless`
